--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ left: 450px;
 <div class="image sections">
 <img src="leafy.png" style="height: 550px;"/> -->
 <div class="logo">
-<img src="sofia.png" id="sofia">
+<img src="sofia.jpg" id="sofia">
 <div class="logotext">
 <h1>FUN FOR THE DISCORD SERVER</h1>
 <a href="https://discord.com/oauth2/authorize?client_id=818722099320455179&scope=bot&permissions=8">
