--- a/invite.html
+++ b/invite.html
@@ -68,8 +68,8 @@ background-color: green;
 </div>
 <div class="information">
 <div class="server1">
-<h1>You can join our Sofia Help server <a href="discordlink">here</a><br/><br/>
-Or our other one <a href="https://discord.gg/3rHvV4X9n8">here</a></h1>
+<h1>You Can Join My Discord Server <a href="https://discord.gg/sbX3ERBtgN">here</a></h1>
+<p>if you have any questions or suggestions, DM me<p/>
 <div class="widget1 widget">
 <div class="backbutton">
 <a href="sofia.html">
