--- a/invite.html
+++ b/invite.html
@@ -74,7 +74,7 @@ background-color: green;
 <div class="backbutton">
 <a href="sofia.html">
 <input type="button" value="<< Back To Homepage" onmouseover="background-color: white;" onmouseout="background-color:green;" 
-onclick="href='sofia.html'" id="linkedbutton"/>
+onclick="href='index.html'" id="linkedbutton"/>
 </a>
 </div>
 </div>
